Working on Apache scanner